# yueduqi-go

./: .dockerignore  .gitignore  Dockerfile  GIT_WORKFLOW_REPORT.md  GO_REWRITE_NOTES.md  GO_REWRITE_PLAN.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts  阅读器.md
client/: index.html  package-lock.json  package.json
client/public/: manifest.json  sw.js
client/src/: App.tsx  api.ts  index.css  main.tsx  test-setup.ts  types.ts
client/src/api/: auth.ts  bookshelf.ts  client.ts  reader.ts  search.ts
client/src/components/: BookCard.test.tsx  (+5 more)
server/: docker-entrypoint.sh  go.mod  go.sum  main.go  package-lock.json  package.json  tsconfig.json
server/cache/: redis.go  ttl.go
server/config/: config.go
server/db/: migrate.go  pool.go
server/handler/: auth.go  bookshelf.go  chapters.go  content.go  handler.go  health.go  hot.go  search.go  source.go
server/middleware/: auth.go
server/model/: types.go
server/parser/: biquge.go  biquge_test.go  guangyu.go  hot.go  parser.go  qixinge.go  qixinge_test.go  registry.go
server/src/: bookParser.test.ts  bookParser.ts  cache.ts  config.test.ts  config.ts  index.test.ts  index.ts  types.ts  utils.test.ts  utils.ts
src/: App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  generic_parser.rs  lib.rs  main.rs  mock_source.rs  rule_engine.rs  source_manager.rs
src/pages/: BookshelfPage.tsx  ChaptersPage.tsx  HistoryPage.tsx  ReaderPage.tsx  SearchPage.tsx  SettingsPage.tsx
(+29 files in other folders)
